<resources>
    <string name="app_name">GLand</string>

    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login_button">login</string>
    <string name="login_signup_link">Not a member? Sign up now.</string>
    <string name="login_error_invalid_email">Enter valid email address</string>
    <string name="login_error_invalid_password">Enter 4 to 10 alphanumeric characters</string>

    <string name="signup_nickname">Nickname</string>
    <string name="signup_email">E-mail</string>
    <string name="signup_phone">Phone number</string>
    <string name="signup_password">Password</string>
    <string name="signup_password_confirm">Confirm passward</string>
    <string name="signup_create_account">Create account</string>
    <string name="signup_login_link">Already a member? Login</string>
    <string name="signup_error_invalid_nickname">Enter 4 and 16 alphanumeric characters</string>
    <string name="signup_error_invalid_email">Enter valid email address</string>
    <string name="signup_error_invalid_phone">Enter valid phone number</string>
    <string name="signup_error_invalid_password">Enter 6 and 10 alphanumeric characters</string>
    <string name="signup_error_mismatch_password">Password not confirmed</string>

    <string name="mi_show_event_list">My events</string>
    <string name="mi_event_add">New event</string>
    <string name="mi_home">Home</string>
    <string name="mi_event_search">Event search</string>
    <string name="mi_user_profile">My profile</string>

    <string name="event_add_city">City:</string>
    <string name="event_add_club">Club:</string>
    <string name="event_add_type">Type:</string>
    <string name="event_add_game">Game:</string>
    <string name="event_add_player_max_count">Players max count:</string>
    <string name="event_add_player_need">Players need:</string>
    <string name="event_add_date">Date:</string>
    <string name="event_add_description">Description:</string>
    <string name="event_add_date_button_text">Choose Date</string>
    <string name="event_add_confirm_button_text">Create Event</string>

    <string name="event_list_item_players_count">Max players: %1$d  Needs players: %2$d</string>
    <string name="event_list_item_creator">Creator: %1$s</string>

    <string name="user_profile_nickname">Nickname:</string>
    <string name="user_profile_firstname">Firstname:</string>
    <string name="user_profile_lastname">Lastname:</string>
    <string name="user_profile_city">City:</string>
    <string name="user_profile_phone">Phone:</string>
    <string name="user_profile_email">Email:</string>
    <string name="user_profile_range">Range:</string>
    <string name="user_profile_role">Role:</string>
    <string name="user_profile_confirm">Confirm</string>
    <string name="user_profile_logout">Logout</string>
    <string name="user_profile_error_invalid_nickname">invalid_nickname</string>
    <string name="user_profile_error_invalid_firstname">invalid_firstname</string>
    <string name="user_profile_error_invalid_lastname">invalid_lastname</string>
    <string name="user_profile_error_invalid_phone">invalid_phone</string>
    <string name="user_profile_error_invalid_email">invalid_email</string>
    <string name="user_profile_error_invalid_city">invalid_city</string>

    <string name="user_profile_edit_hint_nickname">Nickname</string>
    <string name="user_profile_edit_hint_firstname">Firstname</string>
    <string name="user_profile_edit_hint_lastname">Lastname</string>
    <string name="user_profile_edit_hint_phone">Phone</string>
    <string name="user_profile_edit_hint_email">Email</string>
    <string name="user_profile_edit_hint_city">City</string>

    <string name="change_image_dialog_title">Change image</string>
    <string name="change_email_dialog_title">Change email</string>
    <string name="change_password_dialog_title">Change password</string>

    <string name="desc_event_add_image">game logo</string>
    <string name="desc_event_add_btn_edit">edit event</string>
    <string name="desc_event_add_btn_delete">delete event</string>
    <string name="desc_event_add_btn_confirm">confirm participation</string>
    <string name="desc_event_add_btn_deny">deny participation</string>
    <string name="desc_event_add_btn_invite">invite player</string>

    <string name="desc_user_profile_image_header">user profile header image</string>
    <string name="desc_user_profile_image_label_range">user profile rank label</string>
    <string name="desc_user_profile_btn_edit">user profile edit button</string>

    <string name="error_unable_upload_image">Unable to upload user image to server. Please try again later.</string>
    <string name="error_unable_change_email">Unable to change user email.</string>

    <string-array name="cities">
        <item>Kyiv</item>
        <item>Kharkiv</item>
        <item>Dnipro</item>
        <item>Zaporizhia</item>
        <item>Lviv</item>
    </string-array>

    <string-array name="types">
        <item>Game</item>
        <item>Championship</item>
        <item>Dungeons &amp; Dragons</item>
    </string-array>

    <string-array name="clubs">
        <item>CBGames</item>
        <item>Desktop</item>
        <item>EpicWin</item>
    </string-array>

    <string-array name="games">
        <item>Eclipse</item>
        <item>Game of Thrones</item>
        <item>Blood Rage</item>
        <item>Babilon</item>
        <item>Winter viewer</item>
    </string-array>


    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_user_profile_edit">Edit user profile</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
