<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.customdev.boardgames.fragments.EventAddFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!--    CITY    -->
        <TextView
            android:id="@+id/city_header_text"
            android:layout_marginTop="24dp"
            android:text="@string/event_add_city"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/AddEventView.Header"/>
        <View
            android:id="@+id/divider0"
            app:layout_constraintTop_toBottomOf="@+id/city_header_text"
            style="@style/AddEventView.Divider"/>
        <Spinner
            android:id="@+id/choose_city_spinner"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@+id/divider0"
            style="@style/AddEventView.Body"/>

    <!--    CLUB    -->
        <TextView
            android:id="@+id/club_header_text"
            android:text="@string/event_add_club"
            app:layout_constraintTop_toBottomOf="@+id/choose_city_spinner"
            style="@style/AddEventView.Header"/>
        <View
            android:id="@+id/divider1"
            app:layout_constraintTop_toBottomOf="@+id/club_header_text"
            style="@style/AddEventView.Divider"/>
        <Spinner
            android:id="@+id/choose_club_spinner"
            app:layout_constraintTop_toBottomOf="@+id/divider1"
            style="@style/AddEventView.Body"/>

    <!--    TYPE    -->
        <TextView
            android:id="@+id/type_header_text"
            android:text="@string/event_add_type"
            app:layout_constraintTop_toBottomOf="@+id/choose_club_spinner"
            style="@style/AddEventView.Header"/>
        <View
            android:id="@+id/divider2"
            app:layout_constraintTop_toBottomOf="@+id/type_header_text"
            style="@style/AddEventView.Divider"/>
        <Spinner
            android:id="@+id/choose_type_spinner"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            style="@style/AddEventView.Body"/>

    <!--    GAME    -->
        <TextView
            android:id="@+id/game_header_text"
            android:text="@string/event_add_game"
            app:layout_constraintTop_toBottomOf="@+id/choose_type_spinner"
            style="@style/AddEventView.Header"/>
        <View
            android:id="@+id/divider3"
            app:layout_constraintTop_toBottomOf="@+id/game_header_text"
            style="@style/AddEventView.Divider"/>
        <Spinner
            android:id="@+id/choose_game_spinner"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            style="@style/AddEventView.Body"/>

    <!--    MAX PLAYERS COUNT    -->
        <TextView
            android:id="@+id/player_max_count_header_text"
            android:text="@string/event_add_player_max_count"
            app:layout_constraintTop_toBottomOf="@+id/choose_game_spinner"
            style="@style/AddEventView.Header"/>
        <View
            android:id="@+id/divider4"
            app:layout_constraintTop_toBottomOf="@+id/player_max_count_header_text"
            style="@style/AddEventView.Divider"/>
        <Spinner
            android:id="@+id/choose_player_max_count_spinner"
            app:layout_constraintTop_toBottomOf="@+id/divider4"
            style="@style/AddEventView.Body"/>

    <!--    NEEDS PLAYER COUNT    -->
        <TextView
            android:id="@+id/player_need_header_text"
            android:text="@string/event_add_player_need"
            app:layout_constraintTop_toBottomOf="@+id/choose_player_max_count_spinner"
            style="@style/AddEventView.Header"/>
        <View
            android:id="@+id/divider5"
            app:layout_constraintTop_toBottomOf="@+id/player_need_header_text"
            style="@style/AddEventView.Divider"/>
        <Spinner
            android:id="@+id/choose_player_need_spinner"
            app:layout_constraintTop_toBottomOf="@+id/divider5"
            style="@style/AddEventView.Body"/>

    <!--    DATE    -->
        <TextView
            android:id="@+id/date_header_text"
            android:text="@string/event_add_date"
            app:layout_constraintTop_toBottomOf="@+id/choose_player_need_spinner"
            style="@style/AddEventView.Header"/>
        <View
            android:id="@+id/divider6"
            app:layout_constraintTop_toBottomOf="@+id/date_header_text"
            style="@style/AddEventView.Divider"/>
        <Button
            android:id="@+id/choose_date_button"
            android:text="@string/event_add_date_button_text"
            app:layout_constraintTop_toBottomOf="@+id/divider6"
            style="@style/AddEventView.Body"/>

    <!--    DESCRIPTION    -->
        <TextView
            android:id="@+id/description_header_text"
            android:text="@string/event_add_description"
            app:layout_constraintTop_toBottomOf="@+id/choose_date_button"
            style="@style/AddEventView.Header"/>
        <View
            android:id="@+id/divider7"
            app:layout_constraintTop_toBottomOf="@+id/description_header_text"
            style="@style/AddEventView.Divider"/>
        <EditText
            android:id="@+id/description_text"
            android:inputType="text"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/divider7"
            style="@style/AddEventView.Body"/>

    <!--    CONFIRM    -->
        <Button
            android:id="@+id/create_event_button"
            android:layout_width="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/event_add_confirm_button_text"
            app:layout_constraintTop_toBottomOf="@+id/description_text"
            style="@style/AddEventView.Body"/>

        <Space
            android:layout_height="24dp"
            app:layout_constraintTop_toBottomOf="@+id/create_event_button"
            style="@style/AddEventView.Body"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>