<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.customdev.gameland.fragments.UserProfileFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!--    Header      -->
        <ImageView
            android:id="@+id/user_profile_header"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/desc_user_profile_image_header"
            android:src="@drawable/user_profile_header"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33"/>

    <!--    Avatar    -->
        <com.customdev.gameland.customViews.UserProfileImage
            android:id="@+id/user_avatar_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:src="@drawable/avatar"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/user_nickname_label"/>

    <!--    Range    -->
        <ImageView
            android:id="@+id/user_range_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/desc_user_profile_image_label_range"
            android:src="@drawable/ic_flag_24dp"
            app:layout_constraintLeft_toRightOf="@+id/user_avatar_image"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintBottom_toBottomOf="@+id/user_avatar_image"/>
        <TextView
            android:id="@+id/user_range_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/user_range_label"
            app:layout_constraintLeft_toRightOf="@+id/user_range_label"
            tools:text="666"/>

    <!--    Edit button    -->
        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="26dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/desc_user_profile_btn_edit"
            android:src="@drawable/ic_event_edit_24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/user_avatar_image"/>

    <!--    Nickname    -->
        <TextView
            android:id="@+id/user_nickname_label"
            android:layout_marginTop="58dp"
            android:text="@string/user_profile_nickname"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            style="@style/AttributesListView.Header"/>
        <View
            android:id="@+id/divider0"
            app:layout_constraintTop_toBottomOf="@+id/user_nickname_label"
            style="@style/AttributesListView.Divider"/>
        <TextView
            android:id="@+id/user_nickname_text"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@+id/divider0"
            tools:text="Trooper"
            style="@style/AttributesListView.Body"/>

    <!--    Firstname    -->
        <TextView
            android:id="@+id/user_firstname_label"
            android:text="@string/user_profile_firstname"
            app:layout_constraintTop_toBottomOf="@+id/user_nickname_text"
            style="@style/AttributesListView.Header"/>
        <View
            android:id="@+id/divider1"
            app:layout_constraintTop_toBottomOf="@+id/user_firstname_label"
            style="@style/AttributesListView.Divider"/>
        <TextView
            android:id="@+id/user_firstname_text"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@+id/divider1"
            tools:text="John"
            style="@style/AttributesListView.Body"/>

    <!--    Lastname    -->
        <TextView
            android:id="@+id/user_lastname_label"
            android:text="@string/user_profile_lastname"
            app:layout_constraintTop_toBottomOf="@+id/user_firstname_text"
            style="@style/AttributesListView.Header"/>
        <View
            android:id="@+id/divider2"
            app:layout_constraintTop_toBottomOf="@+id/user_lastname_label"
            style="@style/AttributesListView.Divider"/>
        <TextView
            android:id="@+id/user_lastname_text"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            tools:text="Snow"
            style="@style/AttributesListView.Body"/>

    <!--    Phone    -->
        <TextView
            android:id="@+id/user_phone_label"
            android:text="@string/user_profile_phone"
            app:layout_constraintTop_toBottomOf="@+id/user_lastname_text"
            style="@style/AttributesListView.Header"/>
        <View
            android:id="@+id/divider3"
            app:layout_constraintTop_toBottomOf="@+id/user_phone_label"
            style="@style/AttributesListView.Divider"/>
        <TextView
            android:id="@+id/user_phone_text"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@+id/divider3"
            tools:text="+38 (096) 569 23 57"
            style="@style/AttributesListView.Body"/>

    <!--    Email    -->
        <TextView
            android:id="@+id/user_email_label"
            android:text="@string/user_profile_email"
            app:layout_constraintTop_toBottomOf="@+id/user_phone_text"
            style="@style/AttributesListView.Header"/>
        <View
            android:id="@+id/divider4"
            app:layout_constraintTop_toBottomOf="@+id/user_email_label"
            style="@style/AttributesListView.Divider"/>
        <TextView
            android:id="@+id/user_email_text"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@+id/divider4"
            tools:text="john@snow.com"
            style="@style/AttributesListView.Body"/>

        <Space
            android:layout_height="24dp"
            app:layout_constraintTop_toBottomOf="@+id/user_email_text"
            style="@style/AttributesListView.Body"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>