<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.customdev.boardgames.fragments.UserProfileFragment">

<!--    Action bar    -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_image_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways|snap"
            app:contentScrim="?attr/colorPrimary">

        <!--    Header image    -->
            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_user_profile_image_header"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/user_profile_header"
                app:layout_collapseMode="parallax" />

        <!--    Toolbar    -->
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

<!--    User information    -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <!--    Range    -->
            <ImageView
                android:id="@+id/user_range_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="148dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="148dp"
                android:contentDescription="@string/desc_user_profile_image_label_range"
                android:src="@drawable/ic_flag_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/user_range_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/user_range_label"
                app:layout_constraintLeft_toRightOf="@+id/user_range_label"
                tools:text="666"/>

        <!--    Nickname    -->
            <TextView
                android:id="@+id/user_nickname_label"
                android:layout_marginTop="58dp"
                android:text="@string/user_profile_nickname"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/AttributesListView.Header"/>
            <View
                android:id="@+id/divider0"
                app:layout_constraintTop_toBottomOf="@+id/user_nickname_label"
                style="@style/AttributesListView.Divider"/>
            <TextView
                android:id="@+id/user_nickname_text"
                android:enabled="true"
                app:layout_constraintTop_toBottomOf="@+id/divider0"
                tools:text="Trooper"
                style="@style/AttributesListView.Body"/>

        <!--    Firstname    -->
            <TextView
                android:id="@+id/user_firstname_label"
                android:text="@string/user_profile_firstname"
                app:layout_constraintTop_toBottomOf="@+id/user_nickname_text"
                style="@style/AttributesListView.Header"/>
            <View
                android:id="@+id/divider1"
                app:layout_constraintTop_toBottomOf="@+id/user_firstname_label"
                style="@style/AttributesListView.Divider"/>
            <TextView
                android:id="@+id/user_firstname_text"
                android:enabled="true"
                app:layout_constraintTop_toBottomOf="@+id/divider1"
                tools:text="John"
                style="@style/AttributesListView.Body"/>

        <!--    Lastname    -->
            <TextView
                android:id="@+id/user_lastname_label"
                android:text="@string/user_profile_lastname"
                app:layout_constraintTop_toBottomOf="@+id/user_firstname_text"
                style="@style/AttributesListView.Header"/>
            <View
                android:id="@+id/divider2"
                app:layout_constraintTop_toBottomOf="@+id/user_lastname_label"
                style="@style/AttributesListView.Divider"/>
            <TextView
                android:id="@+id/user_lastname_text"
                android:enabled="true"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                tools:text="Snow"
                style="@style/AttributesListView.Body"/>

        <!--    Phone    -->
            <TextView
                android:id="@+id/user_phone_label"
                android:text="@string/user_profile_phone"
                app:layout_constraintTop_toBottomOf="@+id/user_lastname_text"
                style="@style/AttributesListView.Header"/>
            <View
                android:id="@+id/divider3"
                app:layout_constraintTop_toBottomOf="@+id/user_phone_label"
                style="@style/AttributesListView.Divider"/>
            <TextView
                android:id="@+id/user_phone_text"
                android:enabled="true"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                tools:text="+38 (096) 569 23 57"
                style="@style/AttributesListView.Body"/>

        <!--    Email    -->
            <TextView
                android:id="@+id/user_email_label"
                android:text="@string/user_profile_email"
                app:layout_constraintTop_toBottomOf="@+id/user_phone_text"
                style="@style/AttributesListView.Header"/>
            <View
                android:id="@+id/divider4"
                app:layout_constraintTop_toBottomOf="@+id/user_email_label"
                style="@style/AttributesListView.Divider"/>
            <TextView
                android:id="@+id/user_email_text"
                android:enabled="true"
                app:layout_constraintTop_toBottomOf="@+id/divider4"
                tools:text="john@snow.com"
                style="@style/AttributesListView.Body"/>

            <Space
                android:layout_height="1024dp"
                app:layout_constraintTop_toBottomOf="@+id/user_email_text"
                style="@style/AttributesListView.Body"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

<!--    Avatar    -->
    <com.customdev.boardgames.customViews.UserProfileImage
        android:id="@+id/user_avatar_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_behavior="com.customdev.boardgames.behaviors.UserProfileAvatarBehavior"
        tools:src="@drawable/avatar"
        tools:ignore="UnusedAttribute"

        app:finalHeight="@dimen/image_final_width"
        app:finalYPosition="0dp"
        app:startHeight="0dp"
        app:startToolbarPosition="0dp"
        app:startXPosition="0dp"


    />


    <!--app:layout_anchor="@id/appbar"-->
    <!--android:elevation="8dp"-->
    <!--app:layout_anchorGravity="bottom|left|start"-->
    <!--android:layout_marginLeft="12dp"-->

    <!--android:layout_marginBottom="8dp"-->
    <!--android:layout_marginStart="24dp"-->

<!--    Floating action button    -->
    <android.support.design.widget.FloatingActionButton
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_event_edit_24dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>